wrote modern control

--- a/modern_control.ipynb
+++ b/modern_control.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,28 +115,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## フィードバック \n"
+    "## フィードバック \n",
+    "状態変数を入力にフィードバックさせることによる，\n",
+    "* 応答に関わるシステムの極を変更する極配置法\n",
+    "* 状態変数をゼロに整定させるレギュレータ\n",
+    "* 目標値に出力を追従させるサーボ系\n",
+    "といった制御系を構築するための手法が存在する．\n",
+    "\n",
+    "状態変数を入力にフィードバックさせるとは，以下のようにフィードバック係数$F \\in R^{m\\times n}$により，入力を決定することを指す．\n",
+    "$$\n",
+    "u(t) = -Fx(t)\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 最適レギュレータ\n"
+    "## 最適レギュレータ\n",
+    "評価関数$J$を定義して，リカッチ代数方程式を解くことで，応答と操作量のトレードオフの関係で妥当なフィードバック係数を得る．\n",
+    "$$\n",
+    "J = \\frac{1}{2}\\int^\\infty_0 \\left\\{x^T(t)Qx(t) + u^T(t)Ru(t) \\right\\}dt\n",
+    "$$\n",
+    "$Q$は半正定対称行列，$R$は正定対称行列とされ，試行錯誤的に設定される．($Q$, $R$と応答との具体的な関係に非解明な部分？)\n",
+    "\n",
+    "この評価関数を最小にするには，以下のリカッチ代数方程式の解$P \\in R^{n\\times n}$を用いた状態フィードバック制御を行えば良い．\n",
+    "$$\n",
+    "A^{T}P + PA + Q -PBR^{-1}B^{T}P = 0\n",
+    "$$\n",
+    "$P$による状態フィードバック制御は，\n",
+    "$$\n",
+    "u(t) = -Fx(t) = -R^{-1}B^{T}Px(t)\n",
+    "$$\n",
+    "となる．"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## サーボ系 \n"
+    "## サーボ系 \n",
+    "サーボ系とは与えられた目標値に対して，定常偏差がゼロになるような出力を生成させるための誤差システム"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## オブザーバ \n"
+    "## オブザーバ \n",
+    "状態フィードバックの際には，当然ながら状態変数$x$が必要となる．\n",
+    "しかし，状態変数ベクトル$x$の内，全ての要素が直接観測(例えばセンサなどで読み取る)可能とは限らない．\n",
+    "モデル化されたシステム，即ち状態方程式を用いて，システムが制御されている様子をシミュレートすることで，\n",
+    "直接観測できない状態変数の要素を推定することができる．\n",
+    "全状態を推定するオブザーバと状態のある部分要素のみを推定するオブザーバがある．"
    ]
   }
  ],
