--- a/modern_control.ipynb
+++ b/modern_control.ipynb
@@ -26,9 +26,8 @@
     "定数行列$A \\in R^{n\\times n}, B \\in R^{n\\times m}, C \\in R^{r\\times n}$によって，次のような線形システムが表現される．\n",
     "\n",
     "$$\n",
-    "\\begin{array}\n",
-    "%%\\dot{x} &= Ax(t) + Bu(t) \\\\\n",
-    "\\frac{dx}{dt} &= Ax(t) + Bu(t) \\\\\n",
+    "\\begin{array}{}\n",
+    "\\dot{x} &= Ax(t) + Bu(t) \\\\\n",
     "y &= Cx(t)\n",
     "\\end{array}\n",
     "$$\n"
@@ -36,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,11 +70,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.01  0.  ]\n",
+      " [ 0.    1.01]]\n",
+      "[[ 1.01005017  0.        ]\n",
+      " [ 0.          1.01005017]]\n",
+      "[[ 1.01005017  0.        ]\n",
+      " [ 0.          1.01005017]]\n",
+      "[[ 1.01005017  0.        ]\n",
+      " [ 0.          1.01005017]]\n",
+      "[[ 1.10517092  0.        ]\n",
+      " [ 0.          1.10517092]]\n",
+      "[[ 2.71828183  0.        ]\n",
+      " [ 0.          2.71828183]]\n",
+      "[[ 12842.30511464      0.        ]\n",
+      " [     0.          12842.30511464]]\n",
+      "[[ 22026.46579481      0.        ]\n",
+      " [     0.          22026.46579481]]\n",
+      "[[ 22026.46579481      0.        ]\n",
+      " [     0.          22026.46579481]]\n"
+     ]
+    }
+   ],
    "source": [
-    "def StateTransitionMat(A, t, k=20):"
+    "def StateTransitionMat(A, t, k=20):\n",
+    "    # Approximation method\n",
+    "    E = np.identity(A.shape[0]) # identity term\n",
+    "    a = np.identity(A.shape[0])\n",
+    "    for i in range(1,k+1):\n",
+    "        a = a*A*t/float(i)\n",
+    "        E += a\n",
+    "        \n",
+    "    return E\n",
+    "\n",
+    "A = np.array([[1,0],[0,1]])\n",
+    "print(StateTransitionMat(A, 0.01, 1))\n",
+    "print(StateTransitionMat(A, 0.01, 10))\n",
+    "print(StateTransitionMat(A, 0.01, 100))\n",
+    "print(StateTransitionMat(A, 0.01, 1000))\n",
+    "       \n",
+    "print(StateTransitionMat(A, 0.1, 1000))\n",
+    "print(StateTransitionMat(A, 1.0, 1000))\n",
+    "print(StateTransitionMat(A, 10., 10))\n",
+    "print(StateTransitionMat(A, 10., 100))\n",
+    "print(StateTransitionMat(A, 10., 1000))"
    ]
   },
   {
@@ -89,6 +133,52 @@
     "$$\n",
     "\n",
     "固有値$\\lambda_i$の実部が全て負であるとき，そのシステムは安定である．"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-0.37228132  5.37228132]\n",
+      "[[-0.82456484 -0.41597356]\n",
+      " [ 0.56576746 -0.90937671]]\n",
+      "5.37228132327\n",
+      "-0.372281323269\n",
+      "[ 0.41597356  0.90937671]\n",
+      "[ 0.82456484 -0.56576746]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 固有値・固有ベクトル計算\n",
+    "import numpy.linalg as LA\n",
+    "\n",
+    "A = np.array([[1, 2], [3, 4]])\n",
+    "values, vectors = LA.eig(A)\n",
+    "\n",
+    "print(values)\n",
+    "print(vectors) \n",
+    "\n",
+    "# Aの固有値手計算すると，\n",
+    "e1 = (5 + np.sqrt(33))/2.\n",
+    "e2 = (5 - np.sqrt(33))/2.\n",
+    "v1 = np.array([1, (3+np.sqrt(33))/4.])\n",
+    "v1 /= LA.norm(v1)\n",
+    "\n",
+    "v2 = np.array([1, (3-np.sqrt(33))/4.])\n",
+    "v2 /= LA.norm(v2)\n",
+    "\n",
+    "print (e1)\n",
+    "print (e2)\n",
+    "print (v1)\n",
+    "print (v2)\n",
+    "\n",
+    "# numpy.linalgの固有ベクトルは縦に並んでいる"
    ]
   },
   {
